# Moodflix_back

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  pyproject.toml
.dev/: Dockerfile  init.sh
.dev/moodflix/: app.env  docker-compose.yml  docker.env
.github/workflows/: ci-prod.yaml  ci-stage.yaml
alembic/: env.py
alembic/versions/: 2023_09_24_1347-init.py  2023_09_27_2134-movie_table.py  2023_09_29_2001-movie_genres.py  2023_10_01_2136-movie_type.py  2023_10_01_2329-contraints.py  2023_10_10_0949-movie_list.py  2023_10_13_1845-movie_list_association.py  2023_10_15_1337-movie_note.py  2023_10_21_1800-ratings_wish.py  2023_10_21_1804-remove_triggers.py  2023_10_28_2333-person.py  bf6ee1524d77_init.py
api/: database.py  dependencies.py  main.py  settings.py
api/admin/: firebase.py  router.py
api/commons/: dependencies.py  exception_handlers.py  lifetime.py
api/models/: __init__.py  movie.py  movie_genre.py  movie_list.py  movie_list_association.py  user.py
api/movie/: data_processing.py  get_database.py  post_database.py  router.py  schemas.py  tmdb_api.py
api/movie_list/: association_db.py  get_database.py  movie_list_db.py  post_database.py  router.py  schemas.py
api/routers/: user.py
api/schemas/: __init__.py  commons.py  user.py
api/user/: router.py  schemas.py
api/v1/: router.py
api/v1/admin/: firebase.py  router.py
api/v1/commons/: dependencies.py  exception_handlers.py  model_commons.py
api/v1/models/: __init__.py  movie.py  movie_genre.py  movie_list.py  movie_list_association.py  person.py  rating.py  (+2 more)
(+25 files in other folders)
