[tool.poetry]
name = "moodflix-back"
version = "0.1.0"
description = ""
authors = ["Nathan <nathanboulogne@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
sqlalchemy = "^2.0.21"
uvicorn = "^0.23.2"
psycopg2 = "^2.9.7"
alembic = "^1.12.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.290"
isort = "^5.12.0"
pytest = "^7.4.2"
pre-commit = "^3.4.0"

[tool.ruff]
line-length = 120 # Same as Black.

[tool.black]
line-length = 120 # Same as Ruff.


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
